k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: todo-app
  name: todo-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: todo-app
  template:
    metadata:
      labels:
        app: todo-app
    spec:
      containers:
        - image: image-registry.openshift-image-registry.svc:5000/ogwtest/todo-app:latest
          imagePullPolicy: Always
          name: todo-app
          ports:
            - containerPort: 8080
              protocol: TCP
