k8s/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: todo-app
  name: todo-app
spec:
  port:
    targetPort: 8080-tcp
  to:
    kind: Service
    name: todo-app
    weight: 100
